--- a/commons/src/main/res/values-hu/strings.xml
+++ b/commons/src/main/res/values-hu/strings.xml
@@ -83,18 +83,18 @@
     <string name="please_select_destination">Válasszon célt</string>
     <string name="source_and_destination_same">A forrás és a cél nem lehet azonos</string>
     <string name="copy_failed">Nem lehet másolni a fájlt</string>
-    <string name="copying">Másolás...</string>
+    <string name="copying">Másolás…</string>
     <string name="copying_success">Sikeres fájl másolás</string>
     <string name="copy_move_failed">Hiba történt</string>
-    <string name="moving">Áthelyezés...</string>
+    <string name="moving">Áthelyezés…</string>
     <string name="moving_success">A fájl áthelyezése sikerült</string>
     <string name="moving_success_partial">Egyes fájlokat nem lehet áthelyezni</string>
     <string name="copying_success_partial">Egyes fájlokat nem lehet másolni</string>
     <string name="no_files_selected">Nincs fájl kiválasztva</string>
-    <string name="saving">Mentés...</string>
+    <string name="saving">Mentés…</string>
     <string name="could_not_create_folder">Nem lehet elkészíteni a mappát %s</string>
     <string name="could_not_create_file">Nem lehet elkészíteni a fájlt %s</string>
-    <string name="no_new_items">No new items have been found</string>
+    <string name="no_new_items">Nem található új elem</string>
     <string name="no_space">The destination does not have enough space available.\nRequired %1$s, available %2$s</string>
 
     <!-- Create new -->
@@ -125,6 +125,7 @@
     <string name="confirm_storage_access_text">Kérjük, válassza ki az SD kártya gyökérmappáját a következő képernyőn, hogy írási hozzáférést kapjon</string>
     <string name="confirm_storage_access_text_sd">Ha nem látja az SD kártyát, próbálja meg ezt</string>
     <string name="confirm_selection">Kiválasztás megerősítése</string>
+
     <plurals name="items">
         <item quantity="one">%d elem</item>
         <item quantity="other">%d elem</item>
@@ -135,6 +136,7 @@
         <item quantity="one">%d elem</item>
         <item quantity="other">%d elem</item>
     </plurals>
+
     <plurals name="deleting_items">
         <item quantity="one">%d elem törlése</item>
         <item quantity="other">%d elem törlése</item>
@@ -176,7 +178,7 @@ Ez egy rendszerkorlátozás. Ha használni szeretné a widgeteket, akkor át kel
     <string name="primary_color">Elsődleges szín</string>
     <string name="foreground_color">Előtér szín</string>
     <string name="app_icon_color">Alkalmazás ikon színe</string>
-    <string name="bottom_navigation_bar_color">Bottom navigation bar color</string>
+    <string name="bottom_navigation_bar_color">Alsó navigációs sáv színe</string>
     <string name="restore_defaults">Alapértelmezések visszaállítása</string>
     <string name="use_default">Alapértelmezett használata</string>
     <string name="default_color">Alapértelmezett</string>
@@ -189,8 +191,7 @@ Ez egy rendszerkorlátozás. Ha használni szeretné a widgeteket, akkor át kel
     <string name="undo_changes_confirmation">Biztos visszavonja a változtatást?</string>
     <string name="save_before_closing">Nem mentette a változtatásokat. Menti a kilépés előtt?</string>
     <string name="apply_to_all_apps">Színek alkalmazása az összes Simple Apps-ra</string>
-    <string name="app_icon_color_warning">WARNING: Some launchers do not handle app icon customization properly. In case the icon will disappear, try launching the app via Google Play or some widget, if available.
-        Once launched, just set back the default orange icon #F57C00. You might have to reinstall the app in the worst case.</string>
+    <string name="app_icon_color_warning">FIGYELMEZTETÉS: Néhány indító nem megfelelően kezeli az alkalmazás ikon testreszabását. Abban az esetben, ha az ikon eltűnik, próbálja meg elindítani az alkalmazást a Google Playen vagy egy bizonyos widgeten keresztül, ha elérhető.\nMiután elindult, állítsa vissza az alapértelmezett narancssárga ikont. #F57C00. Lehet, hogy a legrosszabb esetben újra kell telepítenie az alkalmazást.</string>
     <string name="share_colors_success">A színek sikeresen frissültek. Hozzáadott egy új témát, amelynek neve \'Megosztott\'. Kérjük, a jövőben ezt használja az összes alkalmazás színeinek frissítéséhez.</string>
     <string name="purchase_thank_you">
 		<![CDATA[
@@ -306,7 +307,7 @@ Ez egy rendszerkorlátozás. Ha használni szeretné a widgeteket, akkor át kel
     </plurals>
     <plurals name="hours">
         <item quantity="one">%d óra</item>
-        <item quantity="other">%d nap</item>
+        <item quantity="other">%d óra</item>
     </plurals>
     <plurals name="days">
         <item quantity="one">%d nap</item>
@@ -448,7 +449,7 @@ Ez egy rendszerkorlátozás. Ha használni szeretné a widgeteket, akkor át kel
     <string name="password_protect_hidden_items">Jelszavas védelem a rejtett elem láthatóságához</string>
     <string name="password_protect_whole_app">Jelszavas védelem az egész alkalmazáshoz</string>
     <string name="password_protect_file_deletion">Jelszavas védelem a fájlok törléséhez és áthelyezéséhez</string>
-    <string name="keep_last_modified">Keep old last-modified value at file operations</string>
+    <string name="keep_last_modified">Tartsa a régi, utoljára módosított értéket a fájl műveleteknél</string>
     <string name="show_info_bubble">Mutassa az információs buborékot a görgetősáv húzásánál</string>
     <string name="prevent_phone_from_sleeping">Megakadályozza a telefon alvó állapotát, amíg az alkalmazás előtérben van</string>
     <string name="skip_delete_confirmation">Mindig ugorja át a törlés megerősítése kérdést</string>
@@ -511,7 +512,7 @@ Ez egy rendszerkorlátozás. Ha használni szeretné a widgeteket, akkor át kel
 
     <!-- OTG devices -->
     <string name="usb">USB</string>
-    <string name="usb_detected">You seem to have an USB device attached to your device. To make sure its files appear properly, you need to grant additional permissions.</string>
+    <string name="usb_detected">Úgy tűnik, a készülékhez egy USB eszköz van csatlakoztatva. További engedélyeket kell megadnia, hogy a fájlok megfelelően jelenjenek meg.</string>
     <string name="confirm_usb_storage_access_text">Kérjük, válassza ki az USB eszköz gyökérmappáját a következő képernyőn, hogy hozzáférést biztosítson</string>
     <string name="wrong_root_selected_usb">Rossz mappát választott ki, válassza ki az USB eszköz gyökérmappáját</string>
 
@@ -554,9 +555,9 @@ Ez egy rendszerkorlátozás. Ha használni szeretné a widgeteket, akkor át kel
     <string name="monday_letter">H</string>
     <string name="tuesday_letter">K</string>
     <string name="wednesday_letter">Sz</string>
-    <string name="thursday_letter">K</string>
+    <string name="thursday_letter">Cs</string>
     <string name="friday_letter">P</string>
-    <string name="saturday_letter">V</string>
+    <string name="saturday_letter">Sz</string>
     <string name="sunday_letter">V</string>
 
     <string name="monday_short">Hé</string>
@@ -573,7 +574,7 @@ Ez egy rendszerkorlátozás. Ha használni szeretné a widgeteket, akkor át kel
     <string name="it_is_free">Ingyenes eddig: %s. Ha eddig letölti, akkor örökre ingyen használhatja.</string>
     <string name="more_info">További információ</string>
     <string name="upgrade">Frissítés</string>
-    <string name="upgrade_calendar">You have to migrate locally stored events manually via exporting in an .ics file, then importing. You can find both export/import buttons at the main screen menu.</string>
+    <string name="upgrade_calendar">A helyiben tárolt eseményeket kézzel kell átvinni egy .ics fájl exportálásával, majd importálással. Az export / import gomb megtalálható a főmenüben.</string>
 
     <!-- About -->
     <string name="about">Névjegy</string>
@@ -603,10 +604,10 @@ Ez egy rendszerkorlátozás. Ha használni szeretné a widgeteket, akkor át kel
 	</string>
     <string name="purchase">Vásárlás</string>
     <string name="update_thank_you">Kérjük frissítse a Simple Thank You alkalmazást a legújabb verzióra</string>
-    <string name="before_asking_question_read_faq">Before you ask a question, please check the app settings and read the Frequently Asked Questions first. Maybe the solution is there.</string>
+    <string name="before_asking_question_read_faq">Mielőtt kérdezne, ellenőrizze az alkalmazás beállításait, és először olvassa el a Gyakran Ismételt Kérdéseket. Talán ott van a megoldás.</string>
     <string name="make_sure_latest">Also make sure that you are using the latest app version.</string>
     <string name="read_it">Olvassa el</string>
-    <string name="rate_us_prompt">Hello,\n\nit looks like you are using this app for quite a while already, and we really appreciate it.\n\nIf we can ask you a favor, please rate us on Google Play. That would really help us a lot.\n\nNo matter how you decide, you will not see this message again.\n\nThanks!</string>
+    <string name="rate_us_prompt">Hello,\n\nÚgy tűnik elég régen használja ezt az alkalmazést és ezt mi igazán nagyra értékeljük.\\n\\nHa megkérhetjük egy szívességre, kérjük, értékeljen minket a Google Playen. Ez igazán segítene nekünk.\\n\\nFüggetlenül attól, hogy hogyan dönt, nem fogja látni ezt az üzenetet újra.\\n\\nKöszönjük!</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
     <string name="new_app">
@@ -621,7 +622,7 @@ Ez egy rendszerkorlátozás. Ha használni szeretné a widgeteket, akkor át kel
 
     <string name="sideloaded_app">
 		<![CDATA[
-            It looks like your app version is corrupt. Please download the original version <a href="%s">here</a>.
+            Úgy tűnik megsérült az alkalmazás. Kérjük töltse le az eredeti verziót <a href="%s">innen</a>.
         ]]>
 	</string>
 
@@ -630,19 +631,18 @@ Ez egy rendszerkorlátozás. Ha használni szeretné a widgeteket, akkor át kel
     <string name="before_asking_question">Mielőtt feltenné egy kérdést, először olvassa el ezt:</string>
     <string name="faq_1_title_commons">Miért nem látom az alkalmazás widgetet a widgetek listáján?</string>
     <string name="faq_1_text_commons">Valószínűleg azért, mert áthelyezte az alkalmazást egy SD kártyára. Van egy Android rendszerkorlátozás, amely ebben az esetben elrejti az adott alkalmazás widgeteket.
-Az egyetlen megoldás az alkalmazás visszahelyezése a belső tárolóra az eszköz beállításain keresztül.</string>
+        Az egyetlen megoldás az alkalmazás visszahelyezése a belső tárolóra az eszköz beállításain keresztül.</string>
     <string name="faq_2_title_commons">Szeretném támogatni, de nem tudok pénzt adni. Van még valami, amit tehetek?</string>
     <string name="faq_2_text_commons">Természetesen. Megoszthatja az alkalmazásokról szóló információkat vagy visszajelzéseket és értékeléseket adhat. Segítséget is nyújthat azzal is, hogy az alkalmazásokat egy új nyelvre fordítja, vagy csak frissíti a meglévő fordításokat.
-Az útmutatót megtalálhatja a https://github.com/SimpleMobileTools/General-Discussion címen, vagy csak írjon egy üzenetet a hello@simplemobiletools.com, ha segítségre van szüksége.</string>
+        Az útmutatót megtalálhatja a https://github.com/SimpleMobileTools/General-Discussion címen, vagy csak írjon egy üzenetet a hello@simplemobiletools.com, ha segítségre van szüksége.</string>
     <string name="faq_3_title_commons">Tévedésből töröltem néhány fájlt, hogyan tudom visszaszerezni?</string>
     <string name="faq_3_text_commons">Sajnos nem lehet. A fájlok azonnal törlődnek a megerősítő párbeszédablak után, ott nincs elérhető Lomtár.</string>
     <string name="faq_4_title_commons">Nem tetszik a widget színe, meg tudom változtatni őket?</string>
     <string name="faq_4_text_commons">Igen, amikor egy widgetet futtat a kezdőképernyőn, megjelenik egy widget konfigurációs képernyő. A bal alsó sarokban színes négyzetek láthatók, csak nyomja meg és új színt választhat. Használhatja a csúszkát az alfa beállításához is.</string>
     <string name="faq_5_title_commons">Vissza tudom állítani a törölt fájlokat?</string>
     <string name="faq_5_text_commons">If they were really deleted, you cannot. However, there is a Recycle Bin enabled by default, it will cause the files just be moved in the Bin instead of deleting them.</string>
-    <string name="faq_6_title_commons">The app launcher icon disappeared. What can I do?</string>
-    <string name="faq_6_text_commons">It is caused by your launcher not supporting icon customization properly. Try launching the app via Google Play or some widget, if available.
-        Once launched, just set back the default orange icon #F57C00. You might have to reinstall the app in the worst case.</string>
+    <string name="faq_6_title_commons">Az alkalmazásindító ikon eltűnt. Mit tehetek?</string>
+    <string name="faq_6_text_commons">Ennek az az oka, hogy a rendszerindító nem támogatja megfelelően az ikon testreszabását. Próbáld elindítani az alkalmazást a Google Playen vagy néhány widgeten keresztül, ha elérhető.\nMiután elindítottad, állítsd vissza az alapértelmezett narancssárga ikont #F57C00. Lehet, hogy a legrosszabb esetben újra kell telepítenie az alkalmazást.</string>
     <string name="faq_7_title_commons">The money has been deducted from my bank account, but I cannot download the app. What can I do?</string>
     <string name="faq_7_text_commons">Payments are fully handled by Google, their system glitches from time to time. Just clear your Google Play app cache and restart your device, then retry downloading it.</string>
     <string name="faq_8_title_commons">Why should I upgrade to the Pro version?</string>
@@ -676,9 +676,9 @@ Az útmutatót megtalálhatja a https://github.com/SimpleMobileTools/General-Dis
     <string name="panorama_view_title">VR Panorama View (panorámakép megjelenítése)</string>
     <string name="sanselan_title">Apache Sanselan (kép metaadat kiolvasás)</string>
     <string name="filters_title">Android Photo Filters (kép szűrők)</string>
-    <string name="gesture_views_title">Gesture Views (zoomable images)</string>
+    <string name="gesture_views_title">Gesztus nézetek (zoomolható képek)</string>
 
     <!-- Google Play listing -->
-    <string name="deprecated_app">DEPRECATED: This version of the app is no longer maintained, get the Pro version at https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro</string>
-    <string name="pro_app_refund">Don\'t forget that if you uninstall any paid app within 2 hours, you will automatically be refunded. If you want a refund anytime later, just contact us at hello@simplemobiletools.com and you will get it. That makes it easy to try it out :)</string>
+    <string name="deprecated_app">ELAVULT: Az alkalmazás ezen verziója már nem fog frissülni, a Pro verziót a https://play.google.com/store/apps/details?id=com.simplemobiletools.xxx.pro címen találja meg.</string>
+    <string name="pro_app_refund">Ne felejtse el, hogy ha 2 órán belül eltávolítja a fizetős alkalmazásunkat, akkor automatikusan visszatérítjük az árát. Ha később bármikor mégis visszatérítést szeretne, lépjen kapcsolatba velünk a hello@simplemobiletools.com címen, és visszakapja. Ez is megkönnyíti a kipróbálást :)</string>
 </resources>
