--- a/commons/src/main/res/values-pt-rBR/strings.xml
+++ b/commons/src/main/res/values-pt-rBR/strings.xml
@@ -603,6 +603,7 @@
     <string name="purchase">Comprar</string>
     <string name="update_thank_you">Por favor, atualize o Simple Thank You para a versão mais recente</string>
     <string name="before_asking_question_read_faq">Antes de fazer uma pergunta, por favor verifique as configurações do aplicativo e a nossa lista de Perguntas Frequentes.</string>
+    <string name="before_rate_read_faq">Before you give us a bad rating, please check the app settings and read the Frequently Asked Questions first. Maybe the solution to your problem is there.</string>
     <string name="make_sure_latest">Also make sure that you are using the latest app version.</string>
     <string name="read_it">Ler</string>
     <string name="rate_us_prompt">Olá,\n\nParece que você já está utilizando este app a algum tempo, e nós agradecemos a você por isso.\n\nPor favor, considere nos avaliar na loja do Google Play. Isso iria nos ajudar bastante.\n\nDe uma forma ou de outra, não iremos pedir novamente.\n\nObrigado!
