--- a/commons/src/main/res/values-cs/strings.xml
+++ b/commons/src/main/res/values-cs/strings.xml
@@ -638,7 +638,7 @@
     <string name="purchase">Koupit</string>
     <string name="update_thank_you">Prosím aktualizujte Jednoduché děkuji na nejnovější verzi</string>
     <string name="before_asking_question_read_faq">Před položením otázky se prosím podívejte do nastavení aplikace a přečtěte si často kladené otázky. Možná v nich naleznete svou odpověď.</string>
-    <string name="before_rate_read_faq">Before you give us a bad rating, please check the app settings and read the Frequently Asked Questions first. Maybe the solution to your problem is there.</string>
+    <string name="before_rate_read_faq">Before you rate us, please check the app settings and read the Frequently Asked Questions first. If you have any problems, maybe the solution is there.</string>
     <string name="make_sure_latest">Také se ujistěte, že používáte nejnovější verzi aplikace.</string>
     <string name="read_it">Přečíst</string>
     <string name="rate_us_prompt">Zdravím,\n\nzdá se, že již tuto aplikaci používáte nějaký čas a velmi si toho ceníme.\n\nMůžeme-li vás proto požádat o laskavost, prosím ohodnoťte nás na Google Play. Moc by nám to pomohlo.\n\nBez ohledu na to, jak se rozhodnete, tato zpráva se vám již nezobrazí.\n\nĎěkuji!</string>
