Updated Russian language

--- a/commons/src/main/res/values-ru/strings.xml
+++ b/commons/src/main/res/values-ru/strings.xml
@@ -619,7 +619,7 @@
     <string name="invite_friends_underlined"><u>Предложить другу</u></string>
     <string name="share_text">Попробуйте %1$s по ссылке %2$s</string>
     <string name="invite_via">Предложить с помощью</string>
-    <string name="rate_us_underlined"><u>Оценить нас в Google Play</u></string>
+    <string name="rate_us_underlined"><u>Оценить в Google Play</u></string>
     <string name="rate">Оценить</string>
     <string name="donate">Поддержать разработчика</string>
     <string name="donate_underlined"><u>Поддержать разработчика</u></string>
@@ -637,11 +637,11 @@
     </string>
     <string name="purchase">Купить</string>
     <string name="update_thank_you">Пожалуйста, обновите \"Simple Thank You\" до последней версии.</string>
-    <string name="before_asking_question_read_faq">Прежде чем задать вопрос, пожалуйста, проверьте настройки приложения и прочтите FAQ (часто задаваемые вопросы). Возможно, решение есть.</string>
-    <string name="before_rate_read_faq">Before you rate us, please check the app settings and read the Frequently Asked Questions first. If you have any problems, maybe the solution is there.</string>
+    <string name="before_asking_question_read_faq">Прежде чем задать вопрос, пожалуйста, изучите настройки приложения и прочтите FAQ (часто задаваемые вопросы). Возможно, решение есть.</string>
+    <string name="before_rate_read_faq">Прежде чем поставить оценку, пожалуйста, изучите настройки приложения и прочтите FAQ (часто задаваемые вопросы). Если у вас возникли какие-то проблемы, возможно, решение уже есть.</string>
     <string name="make_sure_latest">Также убедитесь, что используете последнюю версию приложения.</string>
     <string name="read_it">Прочитать</string>
-    <string name="read_faq">Read FAQ</string>
+    <string name="read_faq">Прочитать FAQ</string>
     <string name="rate_us_prompt">Привет,\n\nпохоже, вы уже давно используете данное приложение и мы очень ценим это.\n\nНе могли бы вы оказать нам услугу и оценить его в Google Play? Это действительно очень нам поможет.\n\nНезависимо от вашего решения данное сообщение больше не появится.\n\nСпасибо!</string>
 
     <!-- New app (do not translate anything on the 4th line) -->
